# 5489helper

./: README.md  pyproject.toml
batch/: .env
batch/src/: .main.py.swp  main.py  settings.py
batch/src/utils/: .utils.py.swp  utils.py
nb/: 5489test.ipynb
nb/.ipynb_checkpoints/: 5489test-checkpoint.ipynb
