[tool.poetry]
name = "5489helper"
version = "0.1.0"
description = ""
authors = ["verxina <bugp765@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
